# contacts_calendar

./: .dockerignore  .gitignore  .slugignore  Dockerfile  Procfile  README.md  docker-compose.yml  example.env  manage.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: main.yml
accounts/: admin.py  backend.py  forms.py  models.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20220202_1852.py  0003_alter_user_first_name.py
accounts/templates/accounts/: account_update.html  account_update_form.html  create_account.html  create_account_done.html  create_account_ex.html  index.html  profile.html  settings.html  update_account.html
accounts/templates/base/: accounts_base.html  accounts_ex.html  base.html  registration_base.html
accounts/templates/mail/: password_reset_email.html  welcome_mail.html
accounts/templates/registration/: logged_out.html  login.html  login_ex.html  logout.html  password_change.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html
contact_list/: admin.py  tests.py  urls.py  views.py
contact_list/templates/base/: contact_fields.html  (+5 more)
contacts/: admin.py  forms.py  models.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_remove_contactfield_phone_number.py  0003_contactfield_phone_number.py
contacts_calendar/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
contacts_calendar/settings/: base.py  local.py  production.py
theme/templates/: base.html
(+23 files in other folders)
